# axum_backend

./: .env  Cargo.toml  Makefile  README.md
axum_graph/: .env  Cargo.toml
axum_graph/dockers/postgres_only/: docker-compose.yaml
axum_graph/dockers/postgres_with_jaeger/: docker-compose.yaml
axum_graph/migrations/: 20240604134632_init.sql
axum_graph/notes/: how_to_deploy.md  learn_graphql_with_axum.md  learn_orm_using_diesel.md  prisma_client_rust.md
axum_graph/src/: command_line.rs  main.rs
axum_graph/src/db/: bookstore.rs  mod.rs
axum_graph/src/query/: elixir.rs  mod.rs
axum_graph/src/routes/: graphql.rs  mod.rs
axum_graphql/: Cargo.toml  diesel.toml
axum_graphql/notes/: how_to_use_sqlx_migration.md
axum_graphql/seeds/: seed_init.sql
axum_graphql/src/: command_line.rs  main.rs
axum_graphql/src/command_line/: diesel.rs  mod.rs  sqlx.rs
axum_graphql/src/observability/: tracing.rs
diesel_demo/: Cargo.toml  README.md  diesel.toml
diesel_demo/src/: lib.rs
diesel_demo/src/models/: mod.rs  post.rs
dockers/postgres_only/: docker-compose.yaml
dockers/postgres_with_jaeger/: docker-compose.yaml
graphql_demo/: Cargo.toml
graphql_demo/notes/: learn_graphql_with_axum.md
graphql_demo/src/: lib.rs
graphql_demo/src/query/: bookstore.rs  mod.rs
seaorm_demo/: Cargo.toml  README.md
seaorm_demo/api/: Cargo.toml
seaorm_demo/api/src/: lib.rs
seaorm_demo/api/src/graphql/: schema.rs
seaorm_demo/api/src/graphql/query/: user.rs
seaorm_demo/docs/: how_to_test_service.md  others.md
seaorm_demo/entity/: Cargo.toml
seaorm_demo/entity/src/: lib.rs  prelude.rs
seaorm_demo/entity/src/acstor/: key_feature.rs  milestone.rs  milestone_key_feature.rs  mod.rs  storage_type.rs  storage_type_key_feature.rs  workload.rs  workload_key_feature.rs
seaorm_demo/migration/: README.md
seaorm_demo/notes/: how_to_generate_entity.md  how_to_test_service.md
seaorm_demo/service/: Cargo.toml  README.md
seaorm_demo/service/src/: lib.rs  mutation.rs  query.rs
seaorm_demo/service/tests/: acstor.rs  mock.rs  prepare.rs  user.rs
seaorm_demo/src/: lib.rs
seaorm_demo/src/entities/: baker.rs  cake.rs  cake_baker.rs  mod.rs  prelude.rs
seaorm_demo/src/query/: mod.rs
sqlx_demo/: Cargo.toml  diesel.toml
sqlx_demo/src/: lib.rs  schema.rs
tracer/src/: lib.rs
