[package]
name = "axum_graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "chrono",
  "json",
  "bigdecimal",
] }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
futures = { version = "0.3" }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.3" }
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
diesel_demo = { path = "../diesel_demo" }
