[package]
name = "graphql_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.21.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.3" }
dotenv = "0.15.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "std",
] }
futures = { version = "0.3" }
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "chrono",
  "json",
  "bigdecimal",
] }
tracer = { path = "../tracer" }
