[package]
name = "sqlx_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "chrono",
  "json",
  "bigdecimal",
] }
serde_json = "1.0"
serde = { version = "1" }
futures = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "std",
] }
